--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
+    "click>=8.1.8",
     "torch>=2.6.0",
     "transformers>=4.48.2",
 ]
