--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "click>=8.1.8",
+    "tiktoken>=0.12.0",
     "torch>=2.6.0",
     "transformers>=4.48.2",
 ]
