--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
+    "accelerate>=1.10.1",
     "click>=8.1.8",
     "dotenv>=0.9.9",
+    "ipykernel>=6.31.0",
+    "numpy>=2.0.2",
     "openai>=2.7.1",
     "tiktoken>=0.12.0",
     "torch>=2.6.0",
+    "tqdm>=4.67.1",
     "transformers>=4.48.2",
 ]
