--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,14 @@ name = "hands-on-large-language-model"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 dependencies = [
     "accelerate>=1.10.1",
     "click>=8.1.8",
     "dotenv>=0.9.9",
     "ipykernel>=6.31.0",
+    "langchain>=1.0.8",
+    "langchain-openai>=1.0.3",
     "numpy>=2.0.2",
     "openai>=2.7.1",
     "tiktoken>=0.12.0",
