--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "dotenv>=0.9.9",
     "ipykernel>=6.31.0",
     "langchain>=1.0.8",
+    "langchain-community>=0.4.1",
     "langchain-openai>=1.0.3",
     "numpy>=2.0.2",
     "openai>=2.7.1",
