--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,13 @@ requires-python = ">=3.10"
 dependencies = [
     "accelerate>=1.10.1",
     "click>=8.1.8",
+    "ddgs>=9.9.1",
     "dotenv>=0.9.9",
     "ipykernel>=6.31.0",
     "langchain>=1.0.8",
     "langchain-community>=0.4.1",
     "langchain-openai>=1.0.3",
+    "numexpr>=2.14.1",
     "numpy>=2.0.2",
     "openai>=2.7.1",
     "tiktoken>=0.12.0",
