--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,10 @@ requires-python = ">=3.10"
 dependencies = [
     "accelerate>=1.10.1",
     "click>=8.1.8",
+    "cohere>=5.20.0",
     "ddgs>=9.9.1",
     "dotenv>=0.9.9",
+    "faiss-cpu>=1.13.0",
     "ipykernel>=6.31.0",
     "langchain>=1.0.8",
     "langchain-community>=0.4.1",
@@ -16,6 +18,7 @@ dependencies = [
     "numexpr>=2.14.1",
     "numpy>=2.0.2",
     "openai>=2.7.1",
+    "pandas>=2.3.3",
     "tiktoken>=0.12.0",
     "torch>=2.6.0",
     "tqdm>=4.67.1",
