--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "numpy>=2.0.2",
     "openai>=2.7.1",
     "pandas>=2.3.3",
+    "rank-bm25>=0.2.2",
+    "scikit-learn>=1.7.2",
     "tiktoken>=0.12.0",
     "torch>=2.6.0",
     "tqdm>=4.67.1",
