--- a/ipynb/pyproject.toml
+++ b/ipynb/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "cohere>=5.20.0",
     "faiss-cpu>=1.13.0",
+    "ipywidgets>=8.1.8",
     "matplotlib>=3.10.7",
     "numpy>=2.2.2",
     "pandas>=2.3.3",
