--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,10 @@ dependencies = [
     "rank-bm25>=0.2.2",
     "scikit-learn>=1.7.2",
     "tiktoken>=0.12.0",
-    "torch>=2.6.0",
+    "torch>=2.8.0",
     "tqdm>=4.67.1",
     "transformers>=4.48.2",
+    "sentence-transformers[train]>=5.1.2",
 ]
 
 [tool.uv.workspace]
