--- a/ipynb/pyproject.toml
+++ b/ipynb/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "cohere>=5.20.0",
+    "datasets>=4.4.1",
     "faiss-cpu>=1.13.0",
     "ipywidgets>=8.1.8",
     "matplotlib>=3.10.7",
@@ -14,6 +15,7 @@ dependencies = [
     "pillow>=12.0.0",
     "rank-bm25>=0.2.2",
     "scikit-learn>=1.7.2",
-    "sentence-transformers>=5.1.2",
+    "sentence-transformers[train]>=5.1.2",
     "tqdm>=4.67.1",
+    "torch>=2.8.0",
 ]
